plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'jvm-test-suite'
}

group = 'no.statkart.matrikkel.keycloak'

repositories {
    mavenCentral()
}

testing {
    suites {
        test {
            useJUnitJupiter()
        }
        integrationTest(JvmTestSuite) {
            dependencies {
                implementation project()
            }
        }
    }
}
tasks.named('integrationTest') {
    dependsOn tasks.named('assemble')
}

dependencies {
    compileOnly enforcedPlatform('org.keycloak:keycloak-parent:26.1.1')
    compileOnly 'org.keycloak:keycloak-core'
    compileOnly 'org.keycloak:keycloak-server-spi'
    compileOnly 'org.keycloak:keycloak-server-spi-private'
    compileOnly 'org.keycloak:keycloak-services'
    compileOnly 'org.keycloak:keycloak-model-storage-private'
    compileOnly 'org.jboss.spec.javax.ws.rs:jboss-jaxrs-api_2.1_spec'
    compileOnly 'org.jboss.logging:jboss-logging'
    compileOnly 'org.bouncycastle:bcprov-jdk18on'

    implementation "com.azure:azure-identity:1.12.1"
    implementation "com.microsoft.graph:microsoft-graph:6.13.0"
    implementation 'com.google.guava:guava:31.1-jre'

    // https://github.com/dasniko/testcontainers-keycloak
    integrationTestImplementation('com.github.dasniko:testcontainers-keycloak:3.6.0')
    integrationTestImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    integrationTestImplementation 'io.rest-assured:rest-assured:5.5.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

task themesJar(type: Jar) {
    archiveClassifier.set('themes')
    from 'themes'
}

shadowJar {
    dependsOn themesJar
}

tasks.assemble {
    dependsOn shadowJar
}
